--- a/finorma.html
+++ b/finorma.html
@@ -334,7 +334,7 @@
                                         <span class="text-xl font-bold text-gray-900" data-i18n-key="services.briefing.stockName">올릭스</span>
                                         <span class="text-lg font-bold text-red-600">+29.97%</span>
                                     </div>
-                                    <div class="text-gray-600 text-sm">45,100원 (+10,400)</div>
+                                    <div class="text-gray-600 text-sm">45,100 (+10,400)</div>
                                     <hr class="my-4">
                                     <h5 class="font-semibold text-gray-800" data-i18n-key="services.briefing.summaryTitle">AI 분석 요약</h5>
                                     <p class="text-sm text-gray-700 mt-2" data-i18n-key="services.briefing.summaryDesc">
@@ -609,8 +609,8 @@
                     },
                     risk: {
                         title: 'Risk Monitoring',
-                        desc: 'When an issue arises with a company in your portfolio or on your watchlist, our AI scans data 24/7 to detect it and notify you immediately.',
-                        desc2: 'Proactively respond to potential risks such as lawsuits, regulations, accidents, supply chain issues, or executive changes before the market reacts.',
+                        desc: 'When an issue arises with a company you have exposure to—whether in your investment portfolio, loan portfolio, or on your watchlist—our AI scans data 24/7 to detect it and notify you immediately. This system has evolved far beyond simple keyword-based detection; our AI is now trained on contextual guidelines, enabling it to analyze and judge an issue\'s relevance with significantly higher accuracy',
+                        desc2: 'This allows you to proactively respond to potential risks such as lawsuits, regulations, accidents, supply chain issues, or executive changes before the market reacts. This advanced, high-accuracy solution is already trusted and in use by Korea\'s two major stock exchanges and leading financial institutions, including major banks.',
                         cardTitle: 'AI Risk Alert',
                         level: 'HIGH',
                         stockName: 'Tesla (TSLA)',
