--- a/finorma.html
+++ b/finorma.html
@@ -599,8 +599,8 @@
                     tab2: 'Risk Monitoring',
                     briefing: {
                         title: 'Daily Briefing',
-                        desc: 'Every morning, our AI analyzes thousands of news articles and data points to summarize market flows, industry trends, and the reasons behind individual stock price movements. It automates repetitive daily research, allowing analysts to focus on higher-value insights.',
-                        desc2: 'The generated briefing can be delivered not only as text but also instantly as video content via an <span class="font-semibold text-blue-600" data-i18n-key="services.briefing.announcer">AI Announcer</span>.',
+                        desc: 'Do you know what content investors are most interested in? It\'s \'Why did my stock go up?\' and \'Why did it go down?\' The Daily Briefing answers exactly that. Every day, for all stocks in Korea and the US, it analyzes the day\'s company-specific news and filings to explain the reasons behind price movements.',
+                        desc2: 'Furthermore, it also summarizes the daily market and industry conditions. This allows us to send personalized briefing reports to your clients, structured like this: \'Your portfolio value changed by this much, because this specific stock moved, and the reason that stock moved is...\'.',
                         announcer: 'AI Announcer',
                         cardTitle: 'AI Daily Briefing',
                         stockName: 'OliX',
