--- a/market_analysis.html
+++ b/market_analysis.html
@@ -198,6 +198,7 @@
             "semiconductor": {
                 id: "semiconductor",
                 navTitle: "반도체 산업 동향",
+                icon: "bar-chart-2",
                 userQuestion: "반도체 산업의 최근 상황이 어때?",
                 data: {
                     "report": "# 반도체 산업 보고서\n\n## 1. 산업 개요 및 특성  \n### 산업 정의 및 주요 특징  \n- **정의** : 반도체는 전자·통신·자동차·AI·데이터센터 등 모든 디지털 산업의 핵심 소자이며, 메모리칩·시스템반도체·파운드리·웨이퍼·포토레지스트 등을 포함한다.  \n- **핵심 기술** : 3nm 이하 초미세 공정, 고효율 발열 관리, NPU(신경망처리장치) 등 AI 전용 회로, 450mm 웨이퍼 기반 대량 생산.  \n- **주요 제품·서비스** : DRAM·NAND Flash(메모리), CIS·LDI·Analog(비메모리), 파운드리 위탁 생산, 반도체 패키징·테스트.  \n\n### 기술·시장·정책적 배경  \n- **기술** : 삼성 파운드리의 ‘발열 억제 기술’이 모바일 AP 수주 확대의 핵심으로 부각(검색결과 1). AI‑NPU 전용 파운드리 구축(검색결과 5) 등 AI‑칩 수요 급증.  \n- **시장** : 2025 년 3분기 전 세계 반도체 매출 2163 억 달러(≈ 318 조 원)로 사상 최고(검색결과 7). 한국은 메모리·시스템반도체에서 글로벌 1~2위 유지.  \n- **정책** : ‘K‑문샷 프로젝트’(검색결과 9·10) 통해 2030년까지 메모리·AI·양자·바이오 등 5대 분야를 미국 대비 85 % 수준까지 끌어올릴 목표. 정부는 AI 모델·GPU 3.7만대 확보(검색결과 4) 등 인프라 투자 확대.  \n\n### 산업 성장 동인 및 리스크 요인  \n- **성장 동인** \n  1. AI·데이터센터 수요 확대 → NPU·GPU·고성능 시스템반도체 수요 급증.  \n  2. 자동차 전동화·자율주행 → MCU·센서·CIS 수요 증가.  \n  3. 정부·민관 협력 투자(700조 원 규모)와 파운드리·팹리스 협업 생태계 조성.  \n- **리스크** \n  1. 글로벌 경기 둔화(미·중 수출 감소)와 반도체 장비 투자 둔화(경제전망 보고서).  \n  2. 기술 격차 확대 위험(TSMC·인텔·삼성 간 파운드리 경쟁 심화).  \n  3. 공급망 차질(포토레지스트·고순도 가스 등 원자재 가격 변동).  \n\n## 2. 산업 규모 및 동향  \n### 시장 규모 및 성장률  \n| 구분 | 2025 년 9월 말(억원) | 전년 대비 성장률 |\n|------|-------------------|----------------|\n| 전체 반도체 매출(국내) | 2,397,686 (삼성) + 643,200 (SK 하이닉스) + 142,868 (LG 이노텍) + 10,094 (DB하이텍) + 10,844 (하나마이크론) + 7,900 (이수페타시스) ≈ **3,212,592 억원** | 2024 년 대비 약 8 % (글로벌 20 % 성장에 비해 다소 저조) |\n| 메모리(삼성+하이닉스) | 3,040,886 억원 | 10 % 이상 성장 (DRAM·NAND 가격 회복) |\n| 비메모리(기타) | 1,171,706 억원 | 5 % 성장 (AI·자동차용 비메모리 확대) |\n\n### 주요 정책 및 제도 변화  \n- **‘K‑문샷’**: 메모리·AI·양자·바이오·희토류 5대 분야에 2030년까지 700조 원 규모 R&D 투자.  \n- **AI NPU 파운드리**: 정부 예산 1.2조 원 투입, 민관 합동 파운드리 구축(검색결과 5).  \n- **상생 파운드리**: 4.5조 원 투입해 팹리스 10배 확대(검색결과 4).  \n\n### 투자 동향  \n- **글로벌**: TSMC·인텔 등 해외 파운드리 200~300조 원 규모 신규 투자(검색결과 2).  \n- **국내**: 삼성·SK 하이닉스는 기존 설비 확대와 AI 전용 라인 구축에 집중, 정부·민관 협력 펀드 조성.  \n\n### 최근 뉴스 트렌드  \n1. **발열 억제 기술** – 모바일 AP 수주 확대(검색결과 1).  \n2. **AI NPU 파운드리** – 첫 민관 합동 파운드리(검색결과 5).  \n3. **K‑문샷** – 2030년 목표와 2026년 AI·양자·바이오 전략 발표(검색결과 9·10).  \n4. **시장 규모 사상 최고** – 3분기 매출 318 조 원 돌파(검색결과 7).  \n\n## 3. 전후방산업 관계  \n### 전방산업 (고객/수요처)  \n- **스마트폰·태블릿** – 삼성·LG 이노텍의 카메라·디스플레이 모듈.  \n- **데이터센터·클라우드** – 메모리·시스템반도체 수요 급증.  \n- **자동차** – MCU·CIS·센서 수요 확대 (현대모비스·LG 이노텍 연계).  \n- **AI·로보틱스** – NPU·GPU 수요가 팹리스·파운드리와 직접 연결.  \n\n### 후방산업 (공급/지원)  \n- **반도체 장비** – 세메스·ASML 등 고정비 비중 높은 장비 공급.  \n- **소재·부품** – 포토레지스트·웨이퍼·고순도 가스 등.  \n- **패키징·테스트** – 하나마이크론·DB하이텍이 핵심 역할 수행.  \n\n### 산업 생태계 (Value Chain)  \n1. **설계(Fabless/팹리스)** – NPU·AI·GPU 설계 기업.  \n2. **파운드리** – 삼성·SK 하이닉스·DB하이텍(8인치 비메모리).  \n3. **패키징·테스트** – 하나마이크론·DB하이텍.  \n4. **시스템 통합** – 스마트폰·자동차 OEM(삼성·LG·현대모비스).  \n\n## 4. 주요 기업 현황  \n### 주요 기업 리스트 및 분석 테이블  \n\n| 기업명 | 사업영역 | 주요 제품/서비스 | 특징 및 성장동력 | 재무 정보 (2025‑09‑30) |\n|--------|----------|------------------|------------------|------------------------|\n| 삼성전자 | 메모리·시스템반도체·파운드리·디스플레이 | DRAM·NAND·AP·GPU·OLED | 발열 억제 기술·AI NPU 파운드리 투자 | 매출 2,397,686 억원 / 영업이익 235,274 억원 |\n| SK하이닉스 | 메모리·비메모리·CIS | DRAM·NAND·CIS | 메모리 가격 회복·비메모리 CIS 재진출 | 매출 643,200 억원 / 영업이익 280,367 억원 |\n| LG이노텍 | 광학솔루션·반도체 기판·전장부품 | 카메라 모듈·포토마스크·PCB | 자동차·VR·XR용 고부가가치 모듈 확대 | 매출 142,868 억원 / 영업이익 3,403 억원 |\n| DB하이텍 | 8인치 비메모리 파운드리·브랜드 IC | LDI·Analog·CIS·Logic | 고정비 구조·특수 공정 역량 | 매출 10,094 억원 / 영업이익 2,069 억원 |\n| 하나마이크론 | 반도체 패키징·테스트 | 450mm 테스트 웨이퍼·패키징 | 파운드리·팹리스 연계 확대 | 매출 10,844 억원 / 영업이익 803 억원 |\n| 이수페타시스 | 고다층 PCB(MLB) | 고다층 PCB | 통신·네트워크·휴대폰용 고밀도 PCB | 매출 7,900 억원 / 영업이익 1,482 억원 |\n\n### 기업별 주요 동향  \n- **삼성전자**: 모바일 AP 발열 억제 기술 적용으로 2025 년 모바일 파운드리 수주 확대. AI NPU 전용 라인 구축 계획 발표.  \n- **SK하이닉스**: 메모리 가격 회복과 동시에 비메모리 CIS 사업 재진출, 2026 년까지 CIS 매출 30 % 성장 목표.  \n- **LG이노텍**: 자동차 전장 부품 수주 확대, XR·VR용 카메라 모듈 신제품 라인업 발표.  \n- **DB하이텍**: 8인치 파운드리 수주 증가, 2025 년 말까지 연간 생산량 1.2 배 확대 목표.  \n- **하나마이크론**: 450mm 테스트 웨이퍼·패키징 라인 투자, 팹리스와의 장기 공급 계약 체결.  \n- **이수페타시스**: 고다층 PCB 수출 비중 85 % 달성, AI·데이터센터용 고밀도 PCB 신규 주문 증가.  \n\n## 5. 산업 영향 및 시사점  \n### 주요 영향 요인  \n- **정책**: ‘K‑문샷’과 AI NPU 파운드리 투자로 정부 주도 R&D 확대가 지속될 전망.  \n- **기술**: 발열 억제·450mm 웨이퍼·AI 전용 NPU 등 차세대 공정·설계 기술이 경쟁우위 결정.  \n- **글로벌**: TSMC·인텔의 대규모 투자와 미국·중국 수출 둔화가 시장 변동성을 높임.  \n\n### 투자자 시사점  \n- **기회**: 메모리·AI NPU 파운드리, 고부가가치 패키징·테스트, 고다층 PCB 등 성장세가 뚜렷함.  \n- **주의**: 글로벌 경기·수출 둔화, 원자재·장비 가격 상승, 기술 격차 확대 위험에 대비 필요.  \n\n### 기업 시사점  \n- **전략**: 파운드리와 팹리스 간 협업(‘상생 파운드리’) 강화, AI·자동차용 비메모리 라인 확대, 발열·전력 효율 기술 선점.  \n- **리스크 관리**: 공급망 다변화(포토레지스트·고순도 가스), R&D 비용 효율화, ESG·탄소중립 대응.  \n\n### 리스크 및 기회 요인  \n- **단기**(2025‑2026): AI·데이터센터 수요 급증 → 비메모리·NPU 성장, 그러나 경기 둔화와 수출 불확실성 지속.  \n- **중장기**(2027‑2032): ‘K‑문샷’ 목표 달성 시 메모리·AI·양자 분야에서 글로벌 2위 도약 가능, 다만 기술 격차와 인재 확보가 핵심 변수.  \n\n## 6. 결론  \n반도체 산업은 AI·자동차·데이터센터 수요가 견인하는 성장 국면에 있으며, 정부의 ‘K‑문샷’·AI NPU 파운드리 투자와 삼성·SK 하이닉스의 발열 억제·비메모리 재진출이 핵심 동력이다. 그러나 글로벌 경기 둔화와 원자재·장비 비용 상승이 리스크로 작용한다. 투자자는 메모리·AI NPU 파운드리, 고부가가치 패키징·테스트, 고다층 PCB에 집중하고, 기업은 파운드리·팹리스 협업과 발열·전력 효율 기술을 선점함으로써 2030 년까지 세계 2위 반도체 강국으로 도약할 수 있다.",
@@ -216,6 +217,7 @@
             "gasvalve": {
                 id: "gasvalve",
                 navTitle: "가스밸브 산업 동향",
+                icon: "bar-chart-2",
                 userQuestion: "가스밸브 산업에 대한 내용도 알려줘.",
                 data: {
                     "report": "# 가스밸브 산업 보고서  \n\n## 1. 산업 개요 및 특성  \n\n### 산업 정의 및 주요 특징  \n- **정의** : 가스·액체·고압 가스(예: LNG, 액화수소) 운송·저장·분배 설비에 사용되는 압력조절·차단·안전장치.  \n- **핵심 제품** : 가스차단밸브, 압력조절기, 가스유량계, 초저온 매뉴버러블 스윙 체크 밸브 등.  \n- **특징** : 고압·저온 환경에서도 누출 방지·역류 차단이 필수이며, 최근 스마트홈·IoT 연계 가스밸브 제어 기능이 추가되고 있음.  \n\n### 기술/시장/정책적 배경  \n- **기술** : 초저온(‑253℃) 환경에서도 작동 가능한 스윙 체크 밸브 국산화, 매뉴버러블(수동 핸들) 기능을 통한 비상 개방 기술 등.  \n- **정책** : 한국가스안전공사, 319억 원 투자 ‘액화수소 시험·인증센터’ 설립(2023‑24) → 액화수소 설비(밸브 포함) 인증 의무화.  \n- **시장** : LNG·수소 인프라 확대와 스마트홈 보급이 가스밸브 수요를 동시에 확대하고 있음.  \n\n### 산업 성장 동인 및 리스크 요인  \n| 성장 동인 | 설명 |\n|---|---|\n| 수소·액화수소 인프라 확대 | 정부·민간 투자 확대 → 고압·초저온 밸브 수요 급증 |\n| LNG 수송·벙커링 증가 | 국제 LNG 수요 회복 → 내·외부 차단밸브 교체·신규 설치 |\n| 스마트홈·IoT 연계 | 가스밸브 원격 제어·안전 모니터링 기능 수요 증가 |\n| 인증·안전 규제 강화 | 시험·인증센터 운영 → 인증 획득이 시장 진입 필수조건 |\n\n| 리스크 요인 | 설명 |\n|---|---|\n| 고도화 R&D 비용 | 초저온·고압 기술 확보에 막대한 투자 필요 |\n| 해외 다국적 기업 경쟁 | Parker·Emerson·Honeywell 등과의 가격·기술 경쟁 |\n| 규제 변동성 | 안전 기준 강화·인증 절차 변화 시 적응 비용 증가 |\n| 원자재 가격 변동 | 황동·스테인리스 등 핵심 소재 가격 상승 압박 |\n\n## 2. 산업 규모 및 동향  \n\n### 시장 규모 및 성장률  \n- 구체적인 매출 규모는 공개되지 않았지만, **에쎈테크(043340)**가 2025년 3분기 기준 **406.4억 원**(매출)·**8.85억 원**(영업이익)을 기록, 전년 동기 대비 매출 성장률 약 48%(전분기 대비) 수준으로 가스밸브 부문의 성장성을 시사.  \n\n### 주요 정책 및 제도 변화  \n- 2023년 한국가스안전공사, 액화수소 시험·인증센터 가동(투자 319억 원) → 액화수소 전용 밸브·안전장치 인증 의무화.  \n- 정부, ‘수소경제 로드맵’에 따라 2030년까지 수소 충전소 1,000곳 이상 구축 목표, 이에 따라 고압·초저온 밸브 수요가 급증할 전망.  \n\n### 투자 동향  \n- 현재 공개된 VC·기관 투자 데이터는 없으나, **수소·액화수소 설비 인증센터** 설립과 정부 보조금 확대가 관련 기업(밸브 제조업체) 투자 매력도를 높이고 있음.  \n\n### 최근 뉴스 트렌드  \n1. **초저온 매뉴버러블 스윙 체크 밸브 국산화** – PK밸브가 LNG·수소 이송 시 비상 개방 가능 기술 확보, 조기 상용화 목표.  \n2. **액화수소 시험·인증센터 개소** – 국내 최초 액화수소 저장·운송 설비(밸브 포함) 인증 체계 구축, 시장 진입 장벽 상승.  \n\n## 3. 전후방산업 관계  \n\n### 전방산업 (고객/수요처)  \n- **가스·전력·수소 충전소** : 가스·수소 공급망 운영업체, LNG 터미널, 수소 충전소 운영사.  \n- **스마트홈 OEM** : 가스밸브 원격 제어·안전 모니터링을 통합하는 IoT 플랫폼 업체.  \n\n### 후방산업 (공급/지원)  \n- **원자재** : 황동, 스테인리스, 특수 합금 등.  \n- **가공·단조** : 황동단조·볼밸브 전문 업체(에쎈테크 등).  \n- **시험·인증** : 한국가스안전공사·액화수소 시험센터.  \n\n### 산업 생태계 (Value Chain)  \n1. **원자재 공급** → 2. **단조·가공·조립**(에쎈테크, 황동볼밸브 업체) → 3. **시험·인증**(가스안전공사) → 4. **시스템 통합**(스마트홈·IoT 기업) → 5. **최종 사용자**(주거·산업·수소 충전소).  \n\n## 4. 주요 기업 현황  \n\n### 주요 기업 리스트 및 분석 테이블  \n\n| 기업명 | 사업영역 | 주요 제품/서비스 | 특징 및 성장동력 | 재무 정보 (2025년 3Q) |\n|--------|----------|------------------|------------------|------------------------|\n| **에쎈테크** (043340) | 황동단조·가공·조립 | 황동볼밸브, 냉동볼밸브, LPG밸브, 가스차단밸브 | 일관된 연속 생산체제 → 외부 의존도 낮음, 다국적 기업(Parker·Emerson·Honeywell)과 장기 공급계약 | 매출 406.4억 원, 영업이익 8.85억 원 |\n| **경동나비엔 계열 – 타임기연아시아(주)** | 가스밸브 제조 | 가스보일러용 가스밸브, 고압·저온 밸브 | 수소·액화수소 설비 인증 연계, 그룹 내 열교환·버너와 시너지 | (재무 공개 없음) |\n| **PK밸브** (언급된 기업) | 초저온 스윙 체크 밸브 | 매뉴버러블 스윙 체크 밸브(초저온) | LNG·수소 이송 시 비상 개방 기능, 국산화 성공 | (재무 공개 없음) |\n\n### 기업별 주요 동향  \n- **에쎈테크**: 2025년 3분기 매출 급증, 다국적 기업과의 장기 공급 계약 지속 확대, 수소·액화수소 전용 밸브 라인업 개발 착수.  \n- **타임기연아시아(주)**: 경동나비엔 그룹의 수소·액화수소 인증센터와 연계해 신규 인증 밸브 생산 예정, 해외(북미·중국) 시장 진출 검토.  \n- **PK밸브**: 초저온 매뉴버러블 스윙 체크 밸브 국산화 성공, 2024‑25년 내 LNG·수소 운송 라인에 적용 목표.  \n\n## 5. 산업 영향 및 시사점  \n\n### 주요 영향 요인  \n- **정책·규제**: 액화수소 인증제도 도입 → 인증 획득 기업에 대한 시장 독점 가능성.  \n- **기술 트렌드**: 초저온·고압 밸브, 매뉴버러블 비상 개방, IoT 연계 원격 제어.  \n- **글로벌 시장**: LNG·수소 수출 확대와 함께 해외 인증(ISO, API) 요구 증가.  \n\n### 투자자 시사점  \n- **투자 기회**: 수소·액화수소 전용 고압·초저온 밸브 시장은 2025‑2030년 연평균 12% 이상 성장 전망. 인증센터와 연계된 기업은 진입 장벽이 높아 장기적 수익성 확보 가능.  \n- **주의 사항**: 기술 개발 비용 회수 기간이 길고, 다국적 기업과의 가격 경쟁이 심화될 수 있음.  \n\n### 기업 시사점  \n- **사업 기회**: 인증센터와 협업해 ‘인증 전용 밸브’ 라인업 구축, 스마트홈·IoT 연계 원격 제어 기능 추가.  \n- **전략적 고려사항**: 원자재 가격 변동에 대비한 장기 계약, 해외 인증 획득, R&D 투자 확대.  \n\n### 리스크 및 기회 요인  \n- **단기(1‑2년)**: 인증센터 가동에 따른 신규 주문 급증, 하지만 인증 절차 지연 시 공급 차질 위험.  \n- **중장기(3‑5년)**: 수소 충전소·액화수소 운송 인프라 확대에 따라 지속적인 수요 증가, 다국적 기업과의 협업·공동 개발 기회 확대.  \n\n## 6. 결론  \n가스밸브 산업은 **수소·액화수소 인프라 확대**, **초저온·고압 기술 국산화**, **스마트홈 연계**라는 세 축을 중심으로 급격히 성장하고 있다. 정부의 인증제도와 수소경제 로드맵이 시장 진입 장벽을 높이는 동시에 인증을 획득한 기업에게는 **높은 진입 장벽과 안정적인 수익 구조**를 제공한다. 에쎈테크와 같은 국내 제조업체가 **다국적 기업과의 공급 계약** 및 **R&D 투자**를 지속한다면, 향후 5년간 **수소·액화수소 전용 고성능 밸브 시장**에서 선도적 위치를 확보할 가능성이 크다. 투자자는 **인증 획득 기업**에 집중하고, 기업은 **기술·인증·스마트연계** 전략을 동시에 추진하는 것이 핵심 성공 요인이다.",
@@ -223,6 +225,19 @@
                     "related_industries": ["가스설비", "에너지", "화학", "자동차", "건설"],
                     "related_sectors": ["C29133 - 탭, 밸브 및 유사장치 제조업"],
                     "related_items": ["압력조절기", "가스유량계", "가스배관", "가스차단밸브", "가스안전장치"]
+                }
+            },
+            "company_discovery": {
+                id: "company_discovery",
+                navTitle: "가스밸브 유망 기업 발굴",
+                icon: "building-2",
+                userQuestion: "\"가스 밸브\" 관련된 기업 중 매출액이 100억이 넘어가는 기업의 리스트를 추출하고, 주소 및 연락 가능한 주소, 홈페이지를 알려줘.",
+                data: {
+                    "report": "# 가스밸브 관련 유망 기업 리스트 (매출 100억↑)\n\n## 검색 조건\n- **키워드**: 가스 밸브, 배관 부품\n- **매출액**: 100억 원 이상\n- **추출 결과**: 2개 기업 발견\n\n## 1. 한국코로나 (NICE: 164470)\n- **주요 생산품**: 가스밸브, 버너, 가공기계, 공조기 및 냉동기\n- **매출액 (2024)**: **118.7억 원**\n- **홈페이지**: [http://koreacorona.com/](http://koreacorona.com/)\n- **연락처**: 02-515-2800\n- **주소**: 서울시 송파구 올림픽로 336 대우유토피아빌딩 501호 (방이동)\n\n## 2. 에이치에스테크 (NICE: 196273)\n- **주요 생산품**: 배관(가스밸브) 부품 제조\n- **매출액 (2024)**: **139.42억 원**\n- **홈페이지**: [http://www.hnstech.co.kr/](http://www.hnstech.co.kr/)\n- **연락처**: 031-777-9533\n- **주소**: 경기 성남시 중원구 둔촌대로 484, 시콕스타워 919호 (상대원동)\n\n### 분석 요약\n두 기업 모두 안정적인 매출 기반을 보유하고 있으며, 특히 **한국코로나**는 가스시설 및 공조기 등 다양한 포트폴리오를, **에이치에스테크**는 배관 부품 제조에 특화된 강점을 보입니다.",
+                    "news_list": [],
+                    "related_industries": ["기계제조", "배관부품", "가스설비"],
+                    "related_sectors": ["C29133 - 탭, 밸브 및 유사장치 제조업"],
+                    "related_items": ["가스밸브", "공조기", "배관부품"]
                 }
             }
         };
@@ -245,7 +260,8 @@
         const parseInline = (text) => {
             return text
                 .replace(/\*\*(.*?)\*\*/g, '<strong class="text-gray-900 font-semibold">$1</strong>')
-                .replace(/\((검색결과.*?)\)/g, '<span class="text-xs text-blue-500 bg-blue-50 px-1 py-0.5 rounded ml-1 cursor-pointer hover:bg-blue-100">$1</span>');
+                .replace(/\((검색결과.*?)\)/g, '<span class="text-xs text-blue-500 bg-blue-50 px-1 py-0.5 rounded ml-1 cursor-pointer hover:bg-blue-100">$1</span>')
+                .replace(/\[(.*?)\]\((.*?)\)/g, '<a href="$2" target="_blank" class="text-indigo-600 hover:underline">$1</a>');
         };
 
         // --- Renderer Functions ---
@@ -346,13 +362,14 @@
             return `<span class="px-3 py-1.5 rounded-full text-xs font-medium cursor-pointer transition-colors ${styles[type]}">${label}</span>`;
         };
 
-        const renderSidebarItem = (id, title, isActive) => {
+        const renderSidebarItem = (id, title, isActive, iconName) => {
             const bgClass = isActive ? 'bg-indigo-50 border-indigo-100 text-indigo-700' : 'hover:bg-gray-50 text-gray-600 border-transparent';
             const iconColor = isActive ? 'text-indigo-500' : 'text-gray-400';
+            const icon = iconName || 'message-square'; // Default icon
             
             return `
             <div onclick="loadReport('${id}')" class="flex items-center gap-3 px-3 py-2.5 rounded-xl border cursor-pointer transition-all ${bgClass} group">
-                <i data-lucide="message-square" width="16" class="${iconColor} group-hover:text-indigo-500"></i>
+                <i data-lucide="${icon}" width="16" class="${iconColor} group-hover:text-indigo-500"></i>
                 <div class="flex-1 min-w-0">
                     <p class="text-sm font-medium truncate">${title}</p>
                     <p class="text-[10px] text-gray-400 truncate mt-0.5">Today</p>
@@ -369,7 +386,7 @@
             // 1. Update Sidebar
             const sidebarList = document.getElementById('sidebar-list');
             sidebarList.innerHTML = Object.keys(reportsDatabase).map(key => 
-                renderSidebarItem(key, reportsDatabase[key].navTitle, key === currentReportId)
+                renderSidebarItem(key, reportsDatabase[key].navTitle, key === currentReportId, reportsDatabase[key].icon)
             ).join('');
 
             // 2. Update User Question
